# support-brain-ai

./: SUPPORTBRAIN_SPEC.md  main.py  pyproject.toml
app/: main.py
app/ai_agent/: tools.py  triage.py
app/core/: config.py  dependency.py  security.py
app/database/: db.py  session.py
app/models/: user.py
app/rag/: ingest.py  retrieval.py
app/routes/: agent_route.py  rag_route.py  user.py
app/schema/: agent_schema.py  rag_schema.py  sign_in.py  user_schema.py
