[project]
name = "support-brain-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "fastembed>=0.7.4",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-qdrant>=1.1.0",
    "openai-agents>=0.12.2",
    "pydantic-settings>=2.13.1",
    "slowapi>=0.1.9",
]
