[project]
name = "support-brain-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "bs4>=0.0.2",
    "colorama>=0.4.6",
    "fastapi[standard]>=0.135.1",
    "fastembed>=0.7.4",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-qdrant>=1.1.0",
    "lxml>=6.0.2",
    "openai-agents>=0.12.2",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.13.1",
    "pypdf>=6.8.0",
    "python-jose[cryptography]>=3.5.0",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.37",
]
